# textual-cellular-automata

./: README.md  pyproject.toml
artifacts/text_ca/corpus/: seed_corpus.jsonl
tests/: test_text_ca_corpus.py  test_text_ca_induction.py  test_text_ca_integration.py
text_ca/: __init__.py  embedding_similarity.py  lakoff_taxonomy.py  text_ca_analytics.py  text_ca_corpus.py  text_ca_induction.py  text_ca_rules.py  text_ca_schema.py  text_ca_simulator.py
